tests/algorithms/transpiler/Zig/backtracking/crossword_puzzle_solver.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/backtracking/crossword_puzzle_solver.zig:31:54: error: @intCast must have a known result type
/workspace/mochi/tests/algorithms/transpiler/Zig/backtracking/crossword_puzzle_solver.zig:31:54: note: use @as to provide explicit result type